@@ -11,6 +11,7 @@ New Searches
 * nup - Nupedia (from Thad Kerosky)
 * exp - Expedia (from Allen B. MacKenzie)
 * spcs - Send Sprint PCS One-Way web messages (from Rick Olson)
+* pinp - ServiceObjects' DOTS GeoPinpoint IP address Location converter (from Thad Kerosky)
 
 Modified Searches
 
